# AnilistOnStream

./: README.md  package-lock.json  package.json  server.js
.github/workflows/: release.yml
obs-plugin/: CMakeLists.txt  README.md
obs-plugin/cmake/: FindSIMDe.cmake  Findlibobs.cmake  Findw32-pthreads.cmake
obs-plugin/flatpak-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
obs-plugin/src/: font5x7.hpp  mal-fetcher.cpp  mal-fetcher.hpp  mal-source.cpp  mal-source.hpp  plugin-main.cpp
public/: index.html  script.js
traybin/: tray_darwin_release
